# goose

./: .gitignore  .replit  package-lock.json  package.json
RustCore/: Cargo.toml  build.rs
RustCore/fixtures/owned/: live_identity_k10_motion_payload.fixture.json  (+1 more)
RustCore/src/: activity_candidates.rs  android_bridge.rs  android_bridge.udl  bridge.rs  capture_correlation.rs  capture_import.rs  debug_ws_server.rs  fixtures.rs  lib.rs  metric_features.rs  perf_budget.rs  property_tests.rs  protocol.rs  sleep_validation.rs  step_counter.rs  step_discovery.rs  store.rs  timeline.rs  validation_labels.rs
RustCore/tests/: activity_candidates_tests.rs  activity_identity_tests.rs  algorithm_compare_tests.rs  bridge_tests.rs  calibration_tests.rs  capture_correlation_tests.rs  capture_import_tests.rs  capture_sanitize_tests.rs  command_tests.rs  debug_ws_tests.rs  energy_rollup_tests.rs  export_tests.rs  fake_ble_peripheral_tests.rs  fixture_tests.rs  health_sync_tests.rs  history_sync_tests.rs  ios_healthkit_boundary_tests.rs  local_health_validation_suite_cli_tests.rs  metric_feature_report_cli_tests.rs  metric_features_tests.rs  metric_readiness_tests.rs  metrics_tests.rs  perf_budget_tests.rs  privacy_lint_tests.rs  property_tests.rs  protocol_tests.rs  reference_runner_cli_tests.rs  reference_tests.rs  sleep_validation_tests.rs  step_counter_tests.rs  step_motion_estimator_tests.rs  step_packet_discovery_tests.rs  storage_check_tests.rs  store_tests.rs  timeline_tests.rs  tooling_inventory_tests.rs  ui_coverage_tests.rs
RustCore/tools/reference/: README.md
(+192 files in other folders)
